kubernetes/help/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blaise-support-website-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/configuration-snippet: |
        real_ip_header CF-Connecting-IP;
spec:
  tls:
  - hosts:
    - help.blaisewallet.com
    - www.help.blaisewallet.com
    secretName: help-blaisewallet-com-server-secret
  rules:
  - host: help.blaisewallet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blaise-support-website
          servicePort: 80
  - host: www.help.blaisewallet.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blaise-support-website
          servicePort: 80
